# Phila-Court-Analytics

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
services/pipeline/: README.md  pyproject.toml
services/pipeline/scripts/: scan_disposition_tokens.py
services/pipeline/src/pipeline/: __init__.py  cli.py  close_held_review_items.py  conviction_family.py  db.py  docket_parser.py  docket_parser_pdf.py  envelope.py  equivalence_check.py  extraction.py  fact_review_vocab.py  forbidden_scan.py  helpers.py  identity.py  link_vocab.py  load.py  logging_utils.py  manual_import.py  paths.py  prune_fact_runs.py  run_fixtures.py  seam_check.py  warning_codes.py
services/pipeline/src/pipeline/aggregates/: __init__.py  generate.py  publish.py  validate.py
services/pipeline/src/pipeline/collector/: __init__.py  classification.py  engine.py  enumeration.py  guard.py  harvest.py  refresh_engine.py  refresh_targets.py  run.py  search_engine.py  (+4 more)
services/pipeline/tests/: test_aggregates_generate.py  test_aggregates_publish.py  test_aggregates_validate.py  test_charge_matcher.py  test_charge_roster_loader.py  test_cli.py  test_close_held_review_items.py  test_collector_classification.py  test_collector_cli.py  test_collector_engine.py  test_collector_enumeration.py  test_collector_guard.py  test_collector_harvest.py  test_collector_refresh_cli.py  test_collector_refresh_engine.py  test_collector_refresh_targets.py  test_collector_search_classification.py  test_collector_search_cli.py  test_collector_search_engine.py  test_collector_transport.py  test_collector_window_ledger.py  test_docket_links.py  test_docket_parser.py  test_envelope.py  test_equivalence_check.py  test_evaluate_extractors.py  test_extraction.py  test_fact_review_vocab.py  test_facts_build_facts.py  test_facts_outcome_eligibility.py  test_facts_sentence_eligibility.py  test_forbidden_scan.py  test_helpers.py  test_identity.py  test_import_side_effects.py  test_judge_attribution.py  test_judge_matcher.py  test_judge_roster_loader.py  test_load.py  test_logging_utils.py  (+17 more)
services/pipeline/tests/tier1/: fixture-index.yaml  generate_goldens.py  sentence_fact_goldens.json  support.py  test_hygiene.py  test_index.py  test_regression.py
(+428 files in other folders)
