[project]
name = "pca-pipeline"
version = "0.1.0"
description = "Data pipeline shell for Philadelphia Court Outcomes Analytics — no pipeline logic yet"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.10",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Distribution is pca-pipeline (monorepo @pca/* convention); import package stays `pipeline`.
module-name = "pipeline"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.12",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
