[project]
name = "pca-pipeline"
version = "0.1.0"
description = "Data pipeline shell for Philadelphia Court Outcomes Analytics — no pipeline logic yet"
requires-python = ">=3.12"
dependencies = [
    # Pinned exact (Task 16.2 / ADR 0001): the production extraction stage
    # must match Capstone's extractor for the Task 17.1 seam comparison.
    "pdfplumber==0.11.10",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Distribution is pca-pipeline (monorepo @pca/* convention); import package stays `pipeline`.
module-name = "pipeline"

[dependency-groups]
# Optional group for the `pipeline collect` command (Task COL-1). Playwright
# is pinned EXACT and lives only here: it is NOT a default group, so `uv sync`
# and CI (`uv sync --locked`) never install it, and no test imports it. Run
# `uv sync --group collector` + `uv run playwright install chromium` to collect.
collector = [
    "playwright==1.61.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.12",
    # Task 19.1: parse the tier-1 fixture-index.yaml in the index-validation
    # test. Dev-only (never installed by production `uv sync` without the group).
    "pyyaml>=6",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
